1% of the website finished

--- a/about.html
+++ b/about.html
@@ -1,11 +1,11 @@
 <html>
 
 <header>
-<title>Home page</title>
-<meta charset="UTF-8">
-<meta name="description" content="This field contains information about your page. It is usually around two sentences long.">
-<meta name="author" content="TwilightGamerPro">
-<link rel="stylesheet" href="styles/style-main.css">
+    <title>Home page</title>
+    <meta charset="UTF-8">
+    <meta name="description" content="This field contains information about your page. It is usually around two sentences long.">
+    <meta name="author" content="TwilightGamerPro">
+    <link rel="stylesheet" href="styles/style-main.css">
 </header>
 
 <body>
@@ -19,12 +19,13 @@
     <li><a href="tools.html">Tools</a></li>
 </ul>
 <div name="Contents">
-        <div name="Main-contents">
-            <h1>Main page</h1>
-        </div>
+    <div name="Main-contents">
+        <h1>About page</h1>
+    </div>
 </div>
 <div class="footer">
     <footer>&copy; Copyright 2021 TwilightGamerPro</footer>
 </div>
 </body>
+
 </html>
