1% of the website finished

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
             <h1>Main page</h1>
         </div>
 </div>
+<iframe src="https://discord.com/widget?id=623593267468042240&theme=dark" width="350" height="500" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
 <div class="footer">
     <footer>&copy; Copyright 2021 TwilightGamerPro</footer>
 </div>
