--- a/about.html
+++ b/about.html
@@ -21,9 +21,9 @@
 <div name="Contents">
     <div name="Main-contents">
         <h1>About page</h1>
+        <embed width="100%" height="500px" src="wip.html">
     </div>
 </div>
-<iframe src="https://discord.com/widget?id=623593267468042240&theme=dark" width="350" height="500" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
 <div class="footer">
     <footer>&copy; Copyright 2021 TwilightGamerPro</footer>
 </div>
