--- a/site-updates.html
+++ b/site-updates.html
@@ -21,8 +21,8 @@
 </ul>
 <div name="Contents">
     <div name="Main-contents">
-        <h1>Tools page</h1>
-
+        <h1>Site Updates</h1>
+        <embed width="100%" height="500px" src="wip.html">
     </div>
 </div>
 <div class="footer">
