--- a/index.html
+++ b/index.html
@@ -17,11 +17,12 @@
     <li><a href="about.html">About</a></li>
     <li><a href="projects.html">Projects</a></li>
     <li><a href="tools.html">Tools</a></li>
+    <li><a href="site-updates.html">Site Updates</a></li>
 </ul>
 <div name="Contents">
         <div name="Main-contents">
             <h1>Main page</h1>
-            <embed width="100%" height="500px" src="wip.html">
+
         </div>
 </div>
 <div class="footer">
