--- a/site-updates.html
+++ b/site-updates.html
@@ -23,6 +23,10 @@
     <div name="Main-contents">
         <h1>Site Updates</h1>
         <embed width="100%" height="500px" src="wip.html">
+        <div class="Text" rel="stylesheet" href="styles/wip.css">
+            <p class="text1">Currently the website is still in development so please bare with me as i am singly hand coding this entire site!</p>
+            <p class="poster">Posted date: 2/10/2021  From <p class="staff">Web Administrator</p>.</p>
+        </div>
     </div>
 </div>
 <div class="footer">
