--- a/site-updates.html
+++ b/site-updates.html
@@ -6,6 +6,7 @@
     <meta name="description" content="This field contains information about your page. It is usually around two sentences long.">
     <meta name="author" content="TwilightGamerPro">
     <link rel="stylesheet" href="styles/style-main.css">
+    <link rel="stylesheet" href="styles/wip.css">
 </header>
 
 <body>
@@ -22,8 +23,7 @@
 <div name="Contents">
     <div name="Main-contents">
         <h1>Site Updates</h1>
-        <embed width="100%" height="500px" src="wip.html">
-        <div class="Text" rel="stylesheet" href="styles/wip.css">
+        <div class="Text">
             <p class="text1">Currently the website is still in development so please bare with me as i am singly hand coding this entire site!</p>
             <p class="poster">Posted date: 2/10/2021  From <p class="staff">Web Administrator</p>.</p>
         </div>
