--- a/site-updates.html
+++ b/site-updates.html
@@ -22,13 +22,14 @@
 </ul>
 <div name="Contents">
     <div name="Main-contents">
-        <h1>Site Updates</h1>
+        <h1><script> var c = document.getElementById("myCanvas"); var ctx = c.getContext("2d"); ctx.font = "30px Arial"; ctx.fillText("Site Updates", 10, 50);</script></h1>
         <div class="Text">
             <p class="text1">Currently the website is still in development so please bare with me as i am singly hand coding this entire site!</p>
             <p class="poster">Posted date: 2/10/2021  From <p class="staff">Web Administrator</p>.</p>
         </div>
     </div>
 </div>
+
 <div class="footer">
     <footer>&copy; Copyright 2021 TwilightGamerPro</footer>
 </div>
