--- a/wip.html
+++ b/wip.html
@@ -10,7 +10,7 @@
     </div>
     <div class="Text">
         <p class="text1">Currently the website is still in development so please bare with me as i am singly hand coding this entire site!</p>
-        <p class="staff">Posted by Web Administrator</p>
+        <p class="poster">Posted date: 2/10/2021 From <p class="staff">Web Administrator</p>.</p>
     </div>
 </div>
 </body>
