--- a/site-updates.html
+++ b/site-updates.html
@@ -24,7 +24,7 @@
         <h1>Site Updates</h1>
         <div class="Text">
             <p class="text1">Currently the website is still in development so please bare with me as i am singly hand coding this entire site!</p>
-            <p class="poster">Posted date: 2/10/2021 From<p class="staff">Web Administrator</p></p>
+            <p class="poster">Posted date: 2/10/2021 From<p class="staff">Web Administrator</p>.</p>
         </div>
     </div>
 </div>
