--- a/site-updates.html
+++ b/site-updates.html
@@ -25,9 +25,9 @@
         <div class="Text">
             <p class="text1">CSS is starting to be a pain in my neck right now but hopefully its fixed for now!</p>
             <p class="poster">Posted date: 2/11/2021 From<p class="staff">Web Administrator</p>.</p>
-        </div>
+        </div><br>
         <br>
-        <div class="Text">
+        <br><div class="Text">
             <p class="text1">Currently the website is still in development so please bare with me as i am singly hand coding this entire site!</p>
             <p class="poster">Posted date: 2/10/2021 From<p class="staff">Web Administrator</p>.</p>
         </div>
